# ai_workspace

./: .gitignore  ReadMe.md  claude-code-手册.md  package-lock.json  skills-report.md
.claude/: settings.json
content-extract/: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
content-extract/.claude/skills/content-extract/: SKILL.md
content-extract/content_extract/: cli.py  config.py  registry.py
content-extract/content_extract/extractors/: __init__.py  article.py  base.py  bilibili.py  code.py  ebook.py  local_docs.py  local_topic.py  web.py
content-extract/content_extract/transcribe/: queue.py  whisper_local.py
content-extract/content_extract/ui/: tui.py
content-extract/content_extract/utils/: frontmatter.py  lang.py
content-extract/docs/superpowers/plans/: 2026-06-02-tui-implementation.md
content-extract/docs/superpowers/specs/: 2026-06-02-tui-design.md
content-extract/tests/: test_base.py  test_bilibili_extractor.py  test_config.py  test_frontmatter.py  test_lang.py  test_registry.py  test_tui.py  test_web_extractor.py
content-extract/wiki/: DASHBOARD.md  INDEX.md  changelog.md
content-extract/wiki/.obsidian/: community-plugins.json  graph.json  workspace.json
content-extract/wiki/hai-docs/: INDEX.md
content-extract/wiki/hai-docs/by-source/: hai-docs-eater.md  hai-docs-llm-proxy.md  hai-docs-mcp-registry.md  hai-docs-pull-request-bot.md  hai-docs-tools-report.md
content-extract/wiki/investing/: INDEX.md
content-extract/wiki/learning/: INDEX.md  cheatsheet.md
content-extract/wiki/spartacus/: 公开API.md  复杂区域.md  架构总览.md  系统契约.md
(+136 files in other folders)
